Code cleanup (#255)
* Remove usages of deprecated Java functions
* Remove unused throws for exceptions